--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,8 +1,8 @@
 <div class="table">
 	<ul>
 		<li class="branding"><a ng-href="#/">angularData</a></li>
-		<li><a ng-href="#/meetings"> </a>Meetings</li>
-		<li><a ng-href="#/login"> </a>Login</li>
-		<li><a ng-href="#/register"> </a>Register</li>		
+		<li><a ng-href="#/meetings">Meetings</a></li>
+		<li><a ng-href="#/login">Login</a></li>
+		<li><a ng-href="#/register">Register</a></li>		
 	</ul>
 </div>
