Add register form, add controllers for login and register events

--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -1,5 +1,6 @@
 <section class="login">
-	<form name="myform" novalidate>
+	<form name="myform" novalidate
+		ng-submit="login()">
 		<h1>Hi there!</h1>
 		<p>Log-in to access the awesomeness!</p>
 
