--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,2 +1,23 @@
-<h1>Meetings</h1>
-<p>Your meetings are listed here.</p>
+<section class="meetings cf">
+
+	<h1>Add Meetings</h1>
+	<form class="formgroup addmeeting cf"
+		name="myform"
+		ng-submit="addMeeting()"
+		notvalidate>
+		
+		<div class="inputwrapper">
+			<input type="text" name="meetingname", placeholder="Meeting Name"
+			ng-model="meetingname" ng-required="true">
+		</div>
+		<button type="submit" class="btn"
+			ng-disabled="myform.$invalid">+</button>
+	</form>
+
+
+	<h2>Your Meetings!</h2>
+	<div class="meeting"
+		ng-repeat="meeting in meetings">
+		<p>{{meeting.name}}</p>
+	</div>
+</section>
