--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -17,7 +17,11 @@
 
 	<h2>Your Meetings!</h2>
 	<div class="meeting"
-		ng-repeat="meeting in meetings">
-		<p>{{meeting.name}}</p>
+		ng-repeat="(key, meeting) in meetings">
+		<button class="btn btn-delete tooltip" 
+		ng-click="deleteMeeting(key)">
+			<span>Delete this meeting</span>
+		</button>
+		<span class="text">{{meeting.name}}</span>
 	</div>
 </section>
