--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -1,5 +1,5 @@
 /* Import fonts */
-@import url("http://fonts.googleapis.com/css?family=Bree+Serif|Merriweather:400,300,700,900|Droid+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Bree+Serif|Merriweather:400,300,700,900|Droid+Sans:400,700");
 
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
