--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -22,7 +22,7 @@
 		</form>
 
 
-		<h2>Your Meetings!</h2>
+		<h2 ng-if='howManyMeetings > 0'>Your Meetings!</h2>
 		<div class="meeting"
 			ng-repeat="(key, meeting) in meetings">
 			<button class="btn btn-delete tooltip" 
