--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -25,6 +25,12 @@
 		<h2 ng-if='howManyMeetings > 0'>Your Meetings!</h2>
 		<div class="meeting"
 			ng-repeat="(key, meeting) in meetings">
+
+			<a class="btn btn-checkin tooltip" 
+			ng-href="#/checkins/{{currentUser.regUser}}/{{key}}">
+				<span>Check-in this meeting</span>
+			</a>
+
 			<button class="btn btn-delete tooltip" 
 			ng-click="deleteMeeting(key)">
 				<span>Delete this meeting</span>
