add filter for search checkins

--- a/builds/development/views/checkinslist.html
+++ b/builds/development/views/checkinslist.html
@@ -5,10 +5,28 @@
 	<div class="search cf">
 		<h2>Search Check-ins</h2>
 		<input type="text" ng-model="query" placeholder="Search for users">
-	</div>
+
+		<div class="formgroup cf">
+			<span class="label">by:</span>
+			<select ng-model="order">
+				<option value="firstname">First Name</option>
+				<option value="lastname">Last Name</option>
+				<option value="date">Date</option>
+			</select>
+		</div>
+
+		<div class="formgroup cf">
+			<input type="radio" id="dirascending" ng-model="direction" name="direction" value="">
+			<label for="dirascending">Ascending</label>
+
+			<input type="radio" id="dirdescending" ng-model="direction" name="direction" value="reverse">
+			<label for="dirdescending">Descending</label>
+		</div>
+
+	</div> 
 
 	<ul class="userlist cf">
-		<li ng-repeat="checkin in checkins | filter: query"> 
+		<li ng-repeat="checkin in checkins | orderBy: order: direction | filter: query"> 
 			<div class="checkin">
 				<div class="buttons">
 					<button class="btn btn-delete tooltip" 
