--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,46 +1,33 @@
-<section class="meetings cf">
-	<div ng-hide="signedIn()" class="sorry">
-		<h1>Sorry</h1>
-		<p>Only registered users can create and manage meetings</p>
-		<p>Please <a ng-href="#/register">Register</a> or 
-		<a ng-href="#/login">Login</a></p>
-	</div>
+<div class="meetings cf">
+    
+    <h1>Add Meeting</h1>
+    <form class="formgroup addmeeting cf"
+      name="myform"
+      ng-submit="addMeeting()"
+      novalidate>
+      <div class="inputwrapper">
+        <input type="text" name="meetingname" 
+        placeholder="Meeting name" 
+          ng-model="meetingname" ng-required="true">
+      </div>
+      <button type="submit" class="btn"
+        ng-disabled="myform.$invalid">+</button>
+    </form>
 
-	<div ng-show="signedIn()" class="displaymeetings">
-		<h1>Add Meetings</h1>
-		<form class="formgroup addmeeting cf"
-			name="myform"
-			ng-submit="addMeeting()"
-			notvalidate>
-			
-			<div class="inputwrapper">
-				<input type="text" name="meetingname", placeholder="Meeting Name"
-				ng-model="meetingname" ng-required="true">
-			</div>
-			<button type="submit" class="btn"
-				ng-disabled="myform.$invalid">+</button>
-		</form>
+    <h2>Your meetings</h2>
+    <div class="meeting" ng-repeat="(key, meeting) in meetings">
+      <button class="btn btn-delete tooltip"
+        ng-click="deleteMeeting(key)">
+      <span>Delete this meeting</span></button>
 
+      <a class="btn btn-list tooltip" 
+        ng-href="#/checkins/{{currentUser.regUser}}/{{key}}/checkinsList">
+        <span>View list of checked in users</span></a>
 
-		<h2 ng-if='howManyMeetings > 0'>Your Meetings!</h2>
-		<div class="meeting"
-			ng-repeat="(key, meeting) in meetings">
-			
-			<a class="btn btn-list tooltip" 
-			ng-href="#/checkins/{{currentUser.regUser}}/{{key}}/checkinsList">
-				<span>View list of checked-in users</span>
-			</a>
+      <a class="btn btn-checkin tooltip" 
+        ng-href="#/checkins/{{currentUser.regUser}}/{{key}}">
+        <span>Go to check-in URL</span></a>
 
-			<a class="btn btn-checkin tooltip" 
-			ng-href="#/checkins/{{currentUser.regUser}}/{{key}}">
-				<span>Check-in this meeting</span>
-			</a>
-
-			<button class="btn btn-delete tooltip" 
-			ng-click="deleteMeeting(key)">
-				<span>Delete this meeting</span>
-			</button>
-			<span class="text">{{meeting.name}}</span>
-		</div>
-	</div>
-</section>
+      <span class="text">{{meeting.name}}</span>
+    </div><!-- meeting list -->
+</div><!-- meetings cf -->
