--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,9 +1,10 @@
 <div class="table">
-	<ul>
-		<li class="branding"><a ng-href="#/">angularData</a></li>
-		<li ng-show="currentUser"><a ng-href="#/meetings">Meetings 
-		<span ng-if="howManyMeetings > 0">({{howManyMeetings}})</span></a></li>
-		<li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
-		<li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>		
-	</ul>
+  <ul>
+    <li class="branding"><a ng-href="#/meetings">angularData</a></li>
+    <li><a ng-show="currentUser" ng-href="#/meetings">Meetings
+    <span ng-show="howManyMeetings">
+      {{ '(' + howManyMeetings + ')' }}</span></a></li>
+    <li><a ng-hide="currentUser" ng-href="#/login">Login</a></li>
+    <li><a ng-hide="currentUser" ng-href="#/register">Register</a></li>
+  </ul>
 </div>
